# bloodline

./: .gitignore  .pylintrc  manage.py  pyproject.toml
blood/: admin.py  blood_types.py  fill_request.py  forms.py  models.py  views.py
blood/management/commands/: generate_donations.py
blood/migrations/: 0001_initial.py  0002_add_israel.py  0002_add_permissions.py  0002_issue_issuerequest_singlerequest.py  0003_create_groups.py  0003_reject_rejecttype.py  0003_singlerequest_units.py  0004_issuerequest_request_time.py  0004_outstandingdonations.py  0005_auto_20210316_1325.py  0005_bloodtypedistribution_mcirequest_outstandingdonations_populationbloodtypedistribution_populationbloo.py  0006_bloodrank_outstandingdonationsmci.py  0006_issue_request_blood_type.py  0007_issuerequest_content_type.py
blood/templates/: accept_donation.html  cant_fill.html  donation.html  donation_received.html  mci_request.html  mci_request_complete.html  outstanding.html  single_request.html  single_request_complete.html  single_request_confirm.html  single_request_start.html
bloodline/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: views.py
homepage/templates/: homepage.html
templates/: base.html  donation.html
templates/registration/: login.html
